--- a/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
+++ b/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
@@ -1,34 +1,34 @@
 ﻿@using DAL.Models;
 @model List<tabClientes>
 @{
-    ViewBag.Title = "MostrarUsuarios";
+    ViewBag.Title = "MostrarClientes";
 }
 
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
-            <center><h1>Lista Usuarios</h1></center>
+            <center><h1>Lista Clientes</h1></center>
             <br />
-            <button class="btn btn-success" onclick="window.location.href='/Usuario/CreateOrEditUsuario'">Agregar</button>
+            <button class="btn btn-success" onclick="window.location.href='/Clientes/AgregarClientes'">Agregar </button>
             <br />
             <table class="table table-hover">
                 <thead>
                     <tr>
                         <th>Nombre</th>
-                        <th>Correo</th>
-                        <th>Contraseña</th>
+                        <th>Telléfono</th>
+                        <th>Dirección</th>
                     </tr>
                 </thead>
                 <tbody>
                     @if (Model.Count() > 0)
                     {
-                        foreach (var u in Model)
+                        foreach (var cl in Model)
                         {
                             <tr>
-                                <td>@u.nombre</td>
-                                <td>@u.telefono</td>
-                               
+                                <td>@cl.nombre</td>
+                                <td>@cl.telefono</td>
+                               <td>@cl.direccion</td>
                                
                             </tr>
 
