--- a/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
+++ b/SistemaInventario/Views/Clientes/MostrarClientes.cshtml
@@ -4,13 +4,21 @@
     ViewBag.Title = "MostrarClientes";
 }
 
-
+@if (TempData["Message"] != null)
+{
+    <div class="alert alert-success alert-dismissable col-md-4 text-center" role="alert" style="margin-top: 10px; width: 35rem;">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <b>@TempData["Message"]</b>
+    </div>
+}
+<br />
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             <center><h1>Lista Clientes</h1></center>
             <br />
-            <button class="btn btn-success" onclick="window.location.href='/Clientes/AgregarClientes'">Agregar </button>
+            <button class="btn btn-success" onclick="window.location.href='/Clientes/AgregarOEditarClientes'">Agregar</button>
+
             <br />
             <table class="table table-hover">
                 <thead>
@@ -28,8 +36,18 @@
                             <tr>
                                 <td>@cl.nombre</td>
                                 <td>@cl.telefono</td>
-                               <td>@cl.direccion</td>
-                               
+                                <td>@cl.direccion</td>
+                                <td>
+                                    <button class="btn btn-primary"
+                                            onclick="window.location.href = '/Clientes/AgregarOEditarClientes?idCliente='+@cl.idCliente">
+                                        Editar
+                                    </button>
+                                    <button class="btn btn-danger"
+                                            onclick="window.location.href = '/Clientes/EliminarClientes?id='+@cl.idCliente">
+                                        Eliminar
+                                    </button>
+
+                                </td>
                             </tr>
 
                         }
