--- a/SistemaInventario/Content/Diseños/Navbar.css
+++ b/SistemaInventario/Content/Diseños/Navbar.css
@@ -1,32 +1,4 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
-    font-family: 'Poppins', sans-serif;
-    font-size: 16px;
-}
-
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-/* Override the default bootstrap behavior where horizontal description lists 
-   will truncate terms that are too long to fit in the left column 
-*/
-.dl-horizontal dt {
-    white-space: normal;
-}
-
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 280px;
-}
-
-
-
+﻿
 /*:::::::::::::::::::::: ❤ NAVBAR ❤ ::::::::::::::::::::::::::::::::::*/
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&subset=devanagari,latin-ext');
@@ -130,14 +102,15 @@ textarea {
     font-weight: 500;
     transition: all 200ms linear;
 }
+
     .nav-link:hover {
         color: #e2e2e2 !important;
     }
-   
 
-    .nav-item:hover .nav-link {
-        color: #e2e2e2 !important;
-    }
+
+.nav-item:hover .nav-link {
+    color: #e2e2e2 !important;
+}
 
 .nav-item.active .nav-link {
     color: #777 !important;
@@ -212,12 +185,12 @@ h1 {
 }
 
 
-h1 span {
-    display: inline-block;
-    transition: all 300ms linear;
-    opacity: 1;
-    transform: translate(0);
-}
+    h1 span {
+        display: inline-block;
+        transition: all 300ms linear;
+        opacity: 1;
+        transform: translate(0);
+    }
 
 body.hero-anime h1 span:nth-child(1) {
     opacity: 0;
@@ -568,29 +541,29 @@ body.dark {
         transition: all 200ms linear;
     }
 
-/* #Link to page
+    /* #Link to page
 ================================================== */
 
-.link-to-portfolio {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    z-index: 200;
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    border-radius: 3px;
-    background-position: center center;
-    background-size: cover;
-    background-image: url('https://ivang-design.com/ig-logo.jpg');
-    box-shadow: 0 0 0 2px rgba(12, 12, 12, .1);
-    transition: opacity .2s, border-radius .2s, box-shadow .2s;
-    transition-timing-function: ease-out;
-}
-
-    .link-to-portfolio:hover {
-        opacity: 0.8;
-        border-radius: 50%;
-        box-shadow: 0 0 0 20px rgba(12, 12, 12, .1);
+    .link-to-portfolio {
+        position: fixed;
+        bottom: 30px;
+        right: 30px;
+        z-index: 200;
+        cursor: pointer;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        border-radius: 3px;
+        background-position: center center;
+        background-size: cover;
+        background-image: url('https://ivang-design.com/ig-logo.jpg');
+        box-shadow: 0 0 0 2px rgba(12, 12, 12, .1);
+        transition: opacity .2s, border-radius .2s, box-shadow .2s;
+        transition-timing-function: ease-out;
     }
+
+        .link-to-portfolio:hover {
+            opacity: 0.8;
+            border-radius: 50%;
+            box-shadow: 0 0 0 20px rgba(12, 12, 12, .1);
+        }
