--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -6,7 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - Inventario</title>
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
-    <link href="~/Content/Site.css" rel="stylesheet" />
+    <link href="~/Content/Diseños/Footer.css" rel="stylesheet" />
+    <link href="~/Content/Diseños/Navbar.css" rel="stylesheet" />
+    <link href="~/Content/Diseños/Site.css" rel="stylesheet" />
+    <link href="~/Content/Diseños/Table.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+
+
 </head>
 <body>
 
@@ -45,7 +51,7 @@
                                         <a class="dropdown-item" href="https://localhost:44366/Clientes/MostrarClientes">Clientes</a>
                                     </div>
                                 </li>
-                               
+
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link" href="#">Inventario</a>
                                 </li>
@@ -56,26 +62,57 @@
             </div>
         </div>
     </div>
-    
-
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-<script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'></script>
 
 
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
+    <script src='https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js'></script>
 
-<div class="container body-content">
+
+
     @RenderBody()
-    <hr />
-    <footer>
-        <p>&copy; @DateTime.Now.Year - Mi aplicación ASP.NET</p>
+    <!-- Footer -->
+    <footer class="text-center text-lg-start  text-muted" style="">
+        <!-- Section: Social media -->
+        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+            <!-- Left -->
+            <div class="me-5 d-none d-lg-block">
+                <h5 style="color: #FFDBFF;">&copy; @DateTime.Now.Year - Sistema de Inventario</h5>
+            </div>
+            <!-- Left -->
+            <!-- Right -->
+            <div class="justify-content-center">
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-facebook fa-2x"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-twitter fa-2x"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-google fa-2x"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
+                <a href="" class="me-4 text-reset">
+                    <i class="fab fa-linkedin fa-2x"></i>
+                </a>
+                <a href="" class="me-4 text-reset justify-content-center">
+                    <i class="fab fa-github fa-2x"></i>
+                </a>
+            </div>
+            <!-- Right -->
+        </section>
+        <!-- Section: Social media -->
+      
     </footer>
-</div>
+    <!-- Footer -->
 
 
-<script src="~/Scripts/JavaScript.js"></script>
 
-@Scripts.Render("~/bundles/jquery")
-@Scripts.Render("~/bundles/bootstrap")
-@RenderSection("scripts", required: false)
+    <script src="~/Scripts/JavaScript.js"></script>
+
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
