--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -33,8 +33,8 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Autos</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="https://localhost:44366/">Ver autos</a>
-                                        <a class="dropdown-item" href="https://localhost:44366/">Marcas</a>
+                                        <a class="dropdown-item" href="https://localhost:44366/Autos/MostrarAutos">Ver autos</a>
+                                        <a class="dropdown-item" href="https://localhost:44366/Marcas/MostrarMarcas">Marcas</a>
                                     </div>
                                 </li>
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
