--- a/SistemaInventario/Content/Diseños/Table.css
+++ b/SistemaInventario/Content/Diseños/Table.css
@@ -1,15 +1,14 @@
-﻿table {
+﻿/*:::::::TABLE:::::::::::*/
+table {
     text-align: center;
-    margin: 30px;
-    padding: 30px;
     margin-top: 30px;
+    width: 100%;
 }
 
     table th, td {
         border: 1px solid #78767B;
         font-weight: bold;
     }
-
 
     table th {
         color: white;
@@ -23,10 +22,23 @@
         cursor: pointer;
     }
 
-.container-fluid {
-    width: 1000px;
-}
-
 table thead {
     background-color: #78767B;
 }
+/*::::::::BTN EDITAR::::::::::*/
+.btn.btn-info{
+    margin: 3px;
+}
+/*:::::::BTN ELIMINAR:::::::*/
+.btn.btn-danger {
+    margin: 3px;
+}
+/*::::::BTN AGREGAR::::::::::*/
+.agregarBtn {
+    margin: 5px;
+    background-color: #82E897;
+}
+    .agregarBtn:hover {
+        background-color: #5bbe6f;
+    }
+
