--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -47,7 +47,7 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Ventas</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="https://localhost:44366/">Ver ventas</a>
+                                        <a class="dropdown-item" href="https://localhost:44366/Ventas/MostrarVentas">Ver ventas</a>
                                         <a class="dropdown-item" href="https://localhost:44366/Clientes/MostrarClientes">Clientes</a>
                                     </div>
                                 </li>
