--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
                                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Compras</a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="https://localhost:44366/">Ver compras</a>
+                                        <a class="dropdown-item" href="https://localhost:44366/Compras/MostrarCompras">Ver compras</a>
                                         <a class="dropdown-item" href="https://localhost:44366/Proveedores/MostrarProveedores">Proveedores</a>
                                     </div>
                                 </li>
@@ -53,7 +53,7 @@
                                 </li>
 
                                 <li class="nav-item pl-4 pl-md-0 ml-0 ml-md-4">
-                                    <a class="nav-link" href="#">Inventario</a>
+                                    <a class="nav-link" href="https://localhost:44366/Inventario/MostrarInventario">Inventario</a>
                                 </li>
                             </ul>
                         </div>
