--- a/SistemaInventario/Views/Autos/AgregarOEditarAutos.cshtml
+++ b/SistemaInventario/Views/Autos/AgregarOEditarAutos.cshtml
@@ -80,7 +80,7 @@
             </div>
 
             <div class="form-group">
-                <button type="submit" class="btn btn-success">Guardar</button>>
+                <button type="submit" class="btn btn-success">Guardar</button>
             </div>
         </div>
             }
