--- a/SistemaInventario/Views/Autos/MostrarAutos.cshtml
+++ b/SistemaInventario/Views/Autos/MostrarAutos.cshtml
@@ -3,57 +3,80 @@
 @{
     ViewBag.Title = "MostrarAutos";
 }
+<link href="~/Content/Diseños/tarjetas.css" rel="stylesheet" />
+<center><h1>Listado de Autos</h1></center>
+<br />
+<div class="containerCards">
+    @if (Model != null)
+    {
+        foreach (var car in Model)
+        {
+    <div class="card">
+        <img src="~/Content/img_cars/@car.imagen"/>
+        <h4>@car.NombreMarca @car.color ($@car.precio)</h4>
+        <p>Modelo: @car.modelo  Motor: @car.motor</p>
+        <p>@car.descripcion</p>
+        <label>
+            <button class="btn btn-success">Comprar</button>
+            <button class="btn btn-info">Añadir al carrito</button>
+        </label>
 
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <center><h1>Listado de Autos</h1></center>
-            <br />
-            <button class="btn agregarBtn" onclick="window.location.href='/Autos/AgregarOEditarAutos'">Agregar Auto</button>
-            <table class="table-hover table-striped ">
-                <thead>
-                    <tr>
-                        <th>Código</th>
-                        <th>Marca</th>
-                        <th>Modelo</th>
-                        <th>Placa</th>
-                        <th>Precio</th>
-                        <th>Imagen</th>
-                        <th>Color</th>
-                        <th>Motor</th>
-                        <th>Descripción</th>
-                        <th >Fecha registro</th>
-                        <th colspan="2">Acciones</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    @if(Model != null)
-            {
-                foreach(var car in Model)
-                {
-                    <tr>
-                        <td>@car.codigo</td>
-                        <td>@car.NombreMarca</td>
-                        <td>@car.modelo</td>
-                        <td>@car.placa</td>
-                        <td><b>$</b>@car.precio</td>
+        <br />
+        <br />
+    </div>
+        }
+    }
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <center><h1>Listado de Autos</h1></center>
+                <br />
+                <button class="btn agregarBtn" onclick="window.location.href='/Autos/AgregarOEditarAutos'">Agregar Auto</button>
+                <table class="table-hover table-striped ">
+                    <thead>
+                        <tr>
+                            <th>Código</th>
+                            <th>Marca</th>
+                            <th>Modelo</th>
+                            <th>Placa</th>
+                            <th>Precio</th>
+                            <th>Imagen</th>
+                            <th>Color</th>
+                            <th>Motor</th>
+                            <th>Descripción</th>
+                            <th>Fecha registro</th>
+                            <th colspan="2">Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @if (Model != null)
+                        {
+                            foreach (var car in Model)
+                            {
+                                <tr>
+                                    <td>@car.codigo</td>
+                                    <td>@car.NombreMarca</td>
+                                    <td>@car.modelo</td>
+                                    <td>@car.placa</td>
+                                    <td><b>$</b>@car.precio</td>
 
-                        <td>@car.imagen</td>
-                        <td>@car.color</td>
-                        <td>@car.motor</td>
-                        <td>@car.descripcion</td>
-                        <td >@car.fechaRegistro</td>
-                        <td width="20">
-                            <button class="btn btn-info" onclick="window.location.href='/Autos/AgregarOEditarAutos?id=' +@car.idAuto">Editar</button>
-                            </td>
-                        <td width="20">
-                            <button class="btn btn-danger" onclick="window.location.href='/Autos/EliminarAutos?id=' +@car.idAuto">Eliminar</button>
-                        </td>
-                    </tr>
-                }
-            }
-                </tbody>
-            </table>
+                                    <td>@car.imagen</td>
+                                    <td>@car.color</td>
+                                    <td>@car.motor</td>
+                                    <td>@car.descripcion</td>
+                                    <td>@car.fechaRegistro</td>
+                                    <td width="20">
+                                        <button class="btn btn-info" onclick="window.location.href='/Autos/AgregarOEditarAutos?id=' +@car.idAuto">Editar</button>
+                                    </td>
+                                    <td width="20">
+                                        <button class="btn btn-danger" onclick="window.location.href='/Autos/EliminarAutos?id=' +@car.idAuto">Eliminar</button>
+                                    </td>
+                                </tr>
+                            }
+                        }
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
