--- a/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
+++ b/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
@@ -7,7 +7,6 @@
 <div class="container">
     <div class="row">
         <div class="col-md-12">
-            <br />
             <center><h1>Listado de Inventario</h1></center>
             <br />
             
@@ -18,6 +17,7 @@
                         <th>Modelo</th>
                         <th>Precio Venta</th>
                         <th>Imagen</th>
+                        <th>Existencia</th>
                         <th>Fecha registro</th>
                     </tr>
                 </thead>
@@ -26,14 +26,15 @@
                     {
                         foreach (var car in Model)
                         {
-                            <tr>
-                                <td>@car.MarcaAuto</td>
-                                <td>@car.ModeloAuto</td>
-                                <td><b>$</b>@car.PrecioAuto</td>
-                                <td>@car.Imagen</td>
-                                <td>@car.Fecha</td>
-                               
-                            </tr>
+                    <tr>
+                        <td>@car.MarcaAuto</td>
+                        <td>@car.ModeloAuto</td>
+                        <td><b>$</b>@car.PrecioAuto</td>
+                        <td>@car.Imagen</td>
+                        <td>@car.existenciaProducto</td>
+                        <td>@car.Fecha</td>
+
+                    </tr>
                         }
                     }
                 </tbody>
