--- a/SistemaInventario/Views/Shared/_Layout.cshtml
+++ b/SistemaInventario/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link href="~/Content/Diseños/Navbar.css" rel="stylesheet" />
     <link href="~/Content/Diseños/Site.css" rel="stylesheet" />
     <link href="~/Content/Diseños/Table.css" rel="stylesheet" />
+    <link href="~/Content/Diseños/body-color.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
 
 
