--- a/SistemaInventario/Views/Usuarios/EditarOCrearUsuarios.cshtml
+++ b/SistemaInventario/Views/Usuarios/EditarOCrearUsuarios.cshtml
@@ -37,15 +37,15 @@
             </div>
             <div class="form-group">
                 <label>Contraseña: </label>
-                @Html.TextBoxFor(x => x.pass, new { @class = "form-control" })
+                @Html.PasswordFor(x => x.pass, new { @class = "form-control" })
                 @Html.ValidationMessageFor(x => x.pass, null, new { @class = "text-danger" })
             </div>
             <div class="form-group">
                 <label>Estado: </label>
                 <label>Activo </label>
-                @Html.RadioButtonFor(x => x.isActivo, true))
+                @Html.RadioButtonFor(x => x.isActivo, true)
                 <label>Inactivo </label>
-                @Html.RadioButtonFor(x => x.isActivo, false))
+                @Html.RadioButtonFor(x => x.isActivo, false)
             </div>
             <div class="form-group">
                 <label>Rol: </label>
