--- a/SistemaInventario/Views/Ventas/AgregarOEditarVentas.cshtml
+++ b/SistemaInventario/Views/Ventas/AgregarOEditarVentas.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DAL.Models;
-@model tabVentas
+@model tabDetalleVentas
 @{
     ViewBag.Title = "AgregarOEditarVentas";
 }
@@ -14,34 +14,20 @@
 
             @using (Html.BeginForm())
             {
-                @Html.HiddenFor(x => x.idVenta)
+                @Html.HiddenFor(x => x.idDetalleVenta)
                 <div class="col-md-6">
                     <div class="form-group">
                         <label>Marca: </label>
                         @Html.DropDownListFor(x => x.fk_auto, (IEnumerable<SelectListItem>)ViewBag.listaAutos,  new { @class = "form-control" })
                         @Html.ValidationMessageFor(x => x.fk_auto, null,htmlAttributes: new { @class = "text-danger" })
                     </div>
-                    <div class="form-group">
-                        <label>Cliente: </label>
-                        @Html.DropDownListFor(x => x.fk_Cliente, (IEnumerable<SelectListItem>)ViewBag.listaClientes, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(x => x.fk_Cliente, null, htmlAttributes: new { @class = "text-danger" })
-                    </div>
+
                     <div class="form-group">
                         <label>Cantidad: </label>
                         @Html.TextBoxFor(x => x.cantidad, new { @class = "form-control" })
                         @Html.ValidationMessageFor(x => x.cantidad, null, new { @class = "text-danger" })
                     </div>
-                    <div class="form-group">
-                        <label>Descripción: </label>
-                        @Html.TextBoxFor(x => x.descripcion, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(x => x.descripcion, null, new { @class = "text-danger" })
-                    </div>
-
-                    <div class="form-group">
-                        <label>Fecha </label>
-                        @Html.TextBoxFor(x => x.fecha, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(x => x.fecha, null, new { @class = "text-danger" })
-                    </div>
+                   
 
                     <div class="form-group">
                         <button type="submit" class="btn btn-success">Guardar</button>>
