--- a/SistemaInventario/Views/Ventas/MostrarVentas.cshtml
+++ b/SistemaInventario/Views/Ventas/MostrarVentas.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DAL.Models
-@model List<tabVentas>
+@model List<tabDetalleVentas>
 @{
     ViewBag.Title = "MostrarVentas";
 }
@@ -16,36 +16,40 @@
                         <th>Id</th>
                         <th>Marca</th>
                         <th>Modelo</th>
-                        <th>Cliente</th>
                         <th>Cantidad</th>
                         <th>Precio</th>
-                        <th>Descripción</th>
-                        <th>Fecha registro</th>
                         <th colspan="2">Acciones</th>
                     </tr>
                 </thead>
                 <tbody>
-                    @if (Model != null)
+                    @if (Model.Count() > 0)
                     {
                         foreach (var ven in Model)
                         {
-                    <tr>
-                        <td>@ven.idVenta</td>
-                        <td>@ven.MarcaAuto</td>
-                        <td>@ven.ModeloAuto</td>
-                        <td>@ven.NombreCliente</td>
-                        <td>@ven.cantidad</td>
-                        <td>$ @ven.PrecioAuto</td>
-                        <td>@ven.descripcion</td>
-                        <td>@ven.fecha</td>
-                        <td width="20">
-                            <button class="btn btn-info" onclick="window.location.href='/Ventas/AgregarOEditarVentas?id=' +@ven.idVenta">Editar</button>
-                        </td>
-                        <td width="20">
-                            <button class="btn btn-danger" onclick="window.location.href='/Ventas/EliminarVentas?id=' +@ven.idVenta">Eliminar</button>
-                        </td>
-                    </tr>
+                            <tr>
+                                <td>@ven.idDetalleVenta</td>
+                                <td>@ven.MarcaAuto</td>
+                                <td>@ven.ModeloAuto</td>
+                                <td>@ven.cantidad</td>
+                                <td>$ @ven.PrecioAuto</td>
+                                <td width="20">
+                                    <button class="btn btn-info" onclick="window.location.href='/Ventas/AgregarOEditarVentas?id=' +@ven.idVenta">Editar</button>
+                                </td>
+                                <td width="20">
+                                    <button class="btn btn-danger" onclick="window.location.href='/Ventas/EliminarVentas?id=' +@ven.idVenta">Eliminar</button>
+                                </td>
+                            </tr>
                         }
+                    }
+                    else
+                    {
+                        <tr>
+                            <td colspan="6">
+                                <center class="text-danger">
+                                    ¡No hay datos para mostrar!
+                                </center>
+                            </td>
+                        </tr>
                     }
                 </tbody>
             </table>
