Login, permisos por rol y modificación de MostrarAutos.cshtml

--- a/SistemaInventario/Views/Shared/Error.cshtml
+++ b/SistemaInventario/Views/Shared/Error.cshtml
@@ -1,14 +1,17 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
+    <title>ErrorPage</title>
 </head>
 <body>
-    <hgroup>
-        <h1>Error.</h1>
-        <h2>Error al procesar la solicitud.</h2>
-    </hgroup>
+    <br /><br />
+    <center style="color:red">
+        <h1>Su usuario no esta autorizado para acceder a esta página</h1>
+        <br />
+        <img src="https://media0.giphy.com/media/8L0Pky6C83SzkzU55a/giphy.gif" />
+    </center>
+    <br /><br />
+    <a href="/">Ir al inicio</a>
 </body>
 </html>
