--- a/SistemaInventario/Content/Diseños/Table.css
+++ b/SistemaInventario/Content/Diseños/Table.css
@@ -1,4 +1,8 @@
 ﻿/*:::::::TABLE:::::::::::*/
+body {
+    padding-bottom: 50px;
+    margin-bottom: 50px;
+}
 table {
     text-align: center;
     margin-top: 30px;
