--- a/SistemaInventario/Views/Ventas/AgregarOEditarVentas.cshtml
+++ b/SistemaInventario/Views/Ventas/AgregarOEditarVentas.cshtml
@@ -30,7 +30,7 @@
                    
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success">Guardar</button>>
+                        <button type="submit" class="btn btn-success">Guardar</button>
                     </div>
                 </div>
             }
