--- a/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
+++ b/SistemaInventario/Views/Inventario/MostrarInventario.cshtml
@@ -75,7 +75,7 @@
                                     <td>@auto.Modelo</td>
                                     <td>@auto.Cantidad</td>
                                     <td>$ @auto.Precio</td>
-                                    <td>@auto.SubTotal</td>
+                                    <td>$ @auto.SubTotal</td>
                                     <td>
 
                                         <button class="btn btn-danger"
