--- a/SistemaInventario/Content/Diseños/Login.css
+++ b/SistemaInventario/Content/Diseños/Login.css
@@ -11,17 +11,18 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border-bottom: 5px solid rgb(209, 42, 159);
-    border-left: 10px solid rgb(209, 42, 159);
+    border-bottom: 7px solid rgb(209, 42, 159);
+    border-left: 7px solid rgb(209, 42, 159);
     border-radius: 10px;
 }
+    .login:hover {
+        transition: translateY(-15px);
+        box-shadow: 0 12px 16px rgb(22 21 21);
+    }
     .login p {
         color: rgb(209, 42, 159);
     }
-    .login img {
-        margin-top: 10px;
-    }
-
+    
     .login input {
         padding: 7px 10px 7px 10px;
         margin: 10px 20px 10px 20px;
